# Game---Nexforge-Engine

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  task_project.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/nexforge-ai/: Cargo.toml
crates/nexforge-ai/src/: lib.rs
crates/nexforge-audio/: Cargo.toml
crates/nexforge-audio/src/: lib.rs
crates/nexforge-core/: Cargo.toml
crates/nexforge-core/src/: engine.rs  lib.rs
crates/nexforge-ecs/: Cargo.toml
crates/nexforge-ecs/benches/: ecs_bench.rs
crates/nexforge-ecs/src/: component.rs  entity.rs  lib.rs  query.rs  scheduler.rs  world.rs
crates/nexforge-net/: Cargo.toml
crates/nexforge-net/src/: lib.rs
crates/nexforge-physics/: Cargo.toml
crates/nexforge-physics/src/: lib.rs
crates/nexforge-renderer/: Cargo.toml
crates/nexforge-renderer/shaders/: pbr.wgsl  post_process.wgsl  shadow.wgsl
crates/nexforge-renderer/src/: camera.rs  lib.rs  mesh.rs  pbr.rs  pipeline.rs  post_process.rs  scene.rs  shadow.rs  text.rs  ui.rs
crates/nexscript/: Cargo.toml
crates/nexscript/benches/: vm_bench.rs
crates/nexscript/src/: ast.rs  compiler.rs  hot_reload.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  vm.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  NEXSCRIPT_SPEC.md
game/: Cargo.toml
game/scripts/: enemy_ai.nxs  game_manager.nxs  player.nxs  weapon.nxs
game/src/: bullet.rs  enemy.rs  game.rs  hud.rs  items.rs  main.rs  player.rs  settings.rs  world.rs
game/src/systems/: enemy.rs  game_manager.rs  mod.rs  player.rs  weapon.rs
tools/dev-console/: Cargo.toml
tools/dev-console/src/: lib.rs
tools/nexscript-lsp/: Cargo.toml
tools/nexscript-lsp/src/: lib.rs
tools/profiler/: Cargo.toml
tools/profiler/src/: lib.rs
