[workspace]
resolver = "2"
members = [
    "crates/nexscript",
    "crates/nexforge-ecs",
    "crates/nexforge-renderer",
    "crates/nexforge-physics",
    "crates/nexforge-audio",
    "crates/nexforge-ai",
    "crates/nexforge-net",
    "crates/nexforge-core",
    "game",
    "tools/dev-console",
    "tools/profiler",
    "tools/nexscript-lsp",
]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bincode = "3"
log = "0.4"
env_logger = "0.11"
wgpu = "29.0"
winit = "0.30"
rapier3d = "0.33"
cpal = "0.18"
