[package]
name = "nexforge-game"
version = "0.1.0"
edition = "2021"
description = "Nexforge Engine — FPS/TPS game entry point"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
nexforge-core = { path = "../crates/nexforge-core" }
nexscript = { path = "../crates/nexscript" }
nexforge-renderer = { path = "../crates/nexforge-renderer" }
winit = { workspace = true }
