[package]
name = "nexforge-ecs"
version = "0.1.0"
edition = "2021"
description = "Archetype-based Entity Component System for Nexforge Engine"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ecs_bench"
harness = false
