[package]
name = "nexscript"
version = "0.1.0"
edition = "2021"
description = "NexScript scripting language — lexer, parser, bytecode compiler, and VM"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = "0.8"
log = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "vm_bench"
harness = false
