[package]
name = "nexscript-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol for NexScript — autocomplete, diagnostics, go-to-definition"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
nexscript = { path = "../../crates/nexscript" }
